@@ -88,7 +88,7 @@ will generate two files under the `protected` directory: `yiic` and
 specifically for the Web application.
 
 We can then create our own commands under the `protected/commands`
-directory. Run the local `yiic` tool, we will see that our own commands
+directory. Running the local `yiic` tool, we will see that our own commands
 appearing together with the standard ones. We can also create our own
 commands to be used when `yiic shell` is used. To do so, just drop our
 command class files under the `protected/commands/shell` directory.
