@@ -364,7 +364,7 @@ class CWebApplication extends CApplication
 	{
 		if($owner===null)
 			$owner=$this;
-		if($route==='')
+		if(($route=trim($route,'/'))==='')
 			$route=$owner->defaultController;
 		$caseSensitive=$this->getUrlManager()->caseSensitive;
 
@@ -654,9 +654,7 @@ class CWebApplication extends CApplication
 			else
 				$module=new $className($owner->getId().'/'.$id,$owner);
 			Yii::setPathOfAlias($className,$module->getBasePath());
-			foreach($config as $k=>$v)
-				$module->$k=$v;
-			$module->init();
+			$module->init($config);
 			return $module;
 		}
 	}
