@@ -81,6 +81,8 @@ class CDbAuthManager extends CAuthManager
 	 */
 	public function checkAccess($itemName,$userId,$params=array())
 	{
+		if(!empty($this->defaultRoles) && $this->checkDefaultRoles($itemName,$userId,$params))
+			return true;
 		$sql="SELECT name, type, description, t1.bizrule, t1.data, t2.bizrule AS bizrule2, t2.data AS data2 FROM {$this->itemTable} t1, {$this->assignmentTable} t2 WHERE name=itemname AND userid=:userid";
 		$command=$this->db->createCommand($sql);
 		$command->bindValue(':userid',$userId);
@@ -94,6 +96,43 @@ class CDbAuthManager extends CAuthManager
 				if($item->checkAccess($itemName,$params))
 					return true;
 			}
+		}
+		return false;
+	}
+
+	/**
+	 * Checks the access based on the default roles as declared in {@link defaultRoles}.
+	 * @param string the name of the operation that need access check
+	 * @param mixed the user ID. This should can be either an integer and a string representing
+	 * the unique identifier of a user. See {@link IWebUser::getId}.
+	 * @param array name-value pairs that would be passed to biz rules associated
+	 * with the tasks and roles assigned to the user.
+	 * @return boolean whether the operations can be performed by the user according to the default roles.
+	 * @since 1.0.3
+	 */
+	protected function checkDefaultRoles($itemName,$userId,$params)
+	{
+		$names=array();
+		foreach($this->defaultRoles as $role)
+		{
+			if(is_string($role))
+				$names[]=$this->db->quoteValue($role);
+			else
+				$names[]=$role;
+		}
+		if(count($condition)<4)
+			$condition='name='.implode(' OR name=',$names);
+		else
+			$condition='name IN ('.implode(', ',$names).')';
+		$sql="SELECT name, type, description, bizrule, data FROM {$this->itemTable} WHERE $condition";
+		$command=$this->db->createCommand($sql);
+		$rows=$command->queryAll();
+
+		foreach($rows as $row)
+		{
+			$item=new CAuthItem($this,$row['name'],$row['type'],$row['description'],$row['bizrule'],unserialize($row['data']));
+			if($item->checkAccess($itemName,$params))
+				return true;
 		}
 		return false;
 	}
