@@ -63,10 +63,33 @@ class CPhpAuthManager extends CAuthManager
 	 */
 	public function checkAccess($itemName,$userId,$params=array())
 	{
+		if(!empty($this->defaultRoles) && $this->checkDefaultRoles($itemName,$userId,$params))
+			return true;
 		foreach($this->getAuthAssignments($userId) as $assignment)
 		{
 			$item=$this->getAuthItem($assignment->getItemName());
 			if($item!==null && $this->executeBizRule($assignment->getBizRule(),$params,$assignment->getData()) && $item->checkAccess($itemName,$params))
+				return true;
+		}
+		return false;
+	}
+
+	/**
+	 * Checks the access based on the default roles as declared in {@link defaultRoles}.
+	 * @param string the name of the operation that need access check
+	 * @param mixed the user ID. This should can be either an integer and a string representing
+	 * the unique identifier of a user. See {@link IWebUser::getId}.
+	 * @param array name-value pairs that would be passed to biz rules associated
+	 * with the tasks and roles assigned to the user.
+	 * @return boolean whether the operations can be performed by the user according to the default roles.
+	 * @since 1.0.3
+	 */
+	protected function checkDefaultRoles($itemName,$userId,$params)
+	{
+		foreach($this->defaultRoles as $role)
+		{
+			$item=$this->getAuthItem($role);
+			if($item!==null && $item->checkAccess($itemName,$params))
 				return true;
 		}
 		return false;
