@@ -27,6 +27,7 @@ Version 1.0.3 to be released
 - New #138: Added support to specify additional attributes for OPTION tags (Qiang)
 - New #140: Allow the route in a URL rule to contain parameters by itself (Qiang)
 - New #146: Added CUrlManager.appendParams which allows creating URLs in path format whose GET parameters are all in the query part (Qiang)
+- New #150: Register CTabView css file with media type='screen' (Qiang)
 - New #156: Added CUrlManager.cacheID to allow disabling URL rule caching (Qiang)
 - New: Upgraded jquery to 1.3.1 (Qiang)
 - New: Upgraded jquery star rating to 2.61 (Qiang)
@@ -45,7 +46,7 @@ Version 1.0.3 to be released
 - New: Added support for auto-incremental composite primary keys in active record (Qiang)
 - New: Added support for application modules (Qiang)
 - New: Added "module" command for yiic shell tool (Qiang)
-
+- New: Added support for using default roles in RBAC (Qiang)
 
 Version 1.0.2 February 1, 2009
 ------------------------------
